deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
spec:
  selector:
    app: sentiment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
