deployment/ingress.yml
#| filename: "deployment/ingress.yaml"
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sentiment-theo.lab.sspcloud.fr
  rules:
  - host: sentiment-theo.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sentiment-service
            port:
              number: 80
